export enum AplicableA {
  COMPRA = "COMPRA",
  BOLETO = "BOLETO",
  MEMBRESIA = "MEMBRESIA"
}