export class Cine {
}
