export enum EstadoBoleto {
  EMITIDO = "EMITIDO",
  CANJEADO = "CANJEADO",
  ANULADO = "ANULADO"
}
