export enum EstadoCompra {
  PENDIENTE = "PENDIENTE",
  COMPLETADA = "COMPLETADA",
  CANCELADA = "CANCELADA"
}