export enum EstadoReserva {
  ACTIVA = "ACTIVA",
  EXPIRADA = "EXPIRADA",
  CANCELADA = "CANCELADA",
  CONFIRMADA = "CONFIRMADA"
}
