export interface User {
    id: number;
    nombre: string;
    email: string;
    password: string;
    rol: 'usuario' | 'admin';
}
