export enum TipoAlerta {
  ESTRENO = "ESTRENO",
  PROMOCION = "PROMOCION",
  AVISO = "AVISO"
}