export enum TipoAsiento {
  VIP = "VIP",
  ESTANDAR = "ESTANDAR",
  RECLINABLE = "RECLINABLE",
  ACCESIBLE = "ACCESIBLE",
  OTRO = "OTRO"
}
