export enum TipoPromocion {
  PORCENTAJE = "PORCENTAJE",
  MONTO = "MONTO",
  OTRO = "OTRO"
}
