export enum Membresia {
  INSIDER = 'INSIDER',
  PREMIERE = 'PREMIERE',
  A_LIST = 'A_LIST',
  NONE = 'NONE'
}
