classDiagram

%% ------------------ ENUMS ------------------
class TipoPromocion {
  <<enumeration>>
  PORCENTAJE
  MONTO
  OTRO
}

class AplicableA {
  <<enumeration>>
  COMPRA
  BOLETO
  MEMBRESIA
}

class EstadoBoleto {
  <<enumeration>>
  EMITIDO
  CANJEADO
  ANULADO
}

class EstadoCompra {
  <<enumeration>>
  PENDIENTE
  COMPLETADA
  CANCELADA
}

class EstadoReserva {
  <<enumeration>>
  ACTIVA
  EXPIRADA
  CANCELADA
  CONFIRMADA
}

class TipoAsiento {
  <<enumeration>>
  VIP
  ESTANDAR
  RECLINABLE
  ACCESIBLE
  OTRO
}

class TipoAlerta {
  <<enumeration>>
  ESTRENO
  PROMOCION
  AVISO
}

class Membresia {
  <<enumeration>>
  INSIDER
  PREMIERE
  A_LIST
  NONE
}

%% ------------------ CLASES ------------------
class Promocion {
  - codigo: string
  - nombre: string
  - descripcion: string
  - tipo: TipoPromocion
  - valor: number
  - aplicable_a: AplicableA
  - fecha_inicio: Date
  - fecha_fin: Date
  - activo: boolean
  - created_at: Date
  - updated_at: Date
}

class Cartelera {
  - updated_at: Date
}

class Funcion {
  - pelicula: Pelicula
  - sala: Sala
  - start_time: Date
  - end_time: Date
  - formato: string
  - precio_base: number
  - disponible: boolean
  - created_at: Date
  - updated_at: Date
}

class Pelicula {
  - titulo: string
  - funciones: Funcion[]
  - sinopsis: string
  - duracion_min: number
  - genero: string
  - clasificacion: string
  - poster_url: string
  - created_at: Date
  - casting: string[]
}

class Cine {
  - nombre: string
  - direccion: string
  - ciudad: string
  - telefono?: string
}

class Sala {
  - cine: Cine
  - nombre: string
  - tipo?: string
  - capacidad: number
  - plano_url?: string
}

class Asiento {
  - disponible: boolean
  - sala: Sala
  - fila: string
  - numero: number
  - etiqueta?: string
  - tipo_asiento: TipoAsiento
  - coordenadas_preview?: any
  - activo: boolean
}

class Reserva {
  - funcion_id: Funcion
  - sala: Sala
  - asientos_etiquetas: string[]
  - created_at: Date
  - expires_at: Date
  - status: EstadoReserva
}

class Boleto {
  - compra_id: string
  - funcion_id: string
  - asiento_id: string
  - usuario_id: string
  - precio: number
  - promocion_id?: string
  - estado: EstadoBoleto
  - fecha_emision: Date
}

class Compra {
  - reserva_id: Reserva[]
  - subtotal: number
  - impuestos: number
  - total: number
  - promociones_aplicadas: Promocion[]
  - estado: EstadoCompra
  - created_at: Date
}

class User {
  <<interface>>
  - nombre: string
  - email: string
  - password: string
  - rol: 'usuario' | 'admin'
}

class Admin {
  - nombre: string
  - email: string
  - password: string
  - rol: "usuario" | "admin"
}

class Alerta {
  - titulo: string
  - mensaje: string
  - tipo: TipoAlerta
  - dirigida_a: string
  - created_at: Date
}

class Sesion {
  - id: UUID
  - token: string
  - created_at: Date
  - expires_at: Date
}

class Usuario {
  - nombre: string
  - email: string
  - password: string
  - rol: 'usuario' | 'admin'
  - apellido?: string
  - telefono?: string
  - membresia: Membresia
  - created_at: Date
  - historial: Compra[]
  - notificaciones: Alerta[]
}

%% ------------------ RELACIONES ------------------
Cartelera "1" o-- "0..*" Funcion
Funcion "0..1" o-- "1" Pelicula
Funcion "0..1" o-- "1" Sala
Sala "1..*" o-- "1" Cine
Sala "1" *-- "1..*" Asiento
Asiento -- TipoAsiento
Reserva "1" *-- "1" Funcion
Reserva "1" *-- "1" Sala
Reserva "0..1" --o "0..1" Compra
Promocion "0..*" --o "0..*" Compra
Promocion -- Membresia
Compra "1..*" --o "1" Usuario
Compra "1" o-- "1..*" Boleto
Usuario ..|> User
Admin ..|> User
Sesion "1" o-- "1" User
Usuario -- Membresia
Admin "manda" -- Alerta
Usuario "recibe" -- Alerta
Pelicula "0..*" o-- "0..*" Funcion

%% ------------------ USO DE ENUMS ------------------
Promocion --> TipoPromocion
Promocion --> AplicableA
Boleto --> EstadoBoleto
Reserva --> EstadoReserva
Compra --> EstadoCompra
Asiento --> TipoAsiento
Alerta --> TipoAlerta
Usuario --> Membresia
Promocion --> Membresia